# pdf-raster

./: LICENSE  README.md  RELEASE.md  biome.json  package.json  turbo.json
.changeset/: README.md  config.json  neat-rivers-smash.md
.github/workflows/: ci.yml  native-artifacts.yml  release.yml
apps/docs/: components.json  next.config.js  package.json
apps/docs/app/: layout.tsx  page.tsx
apps/example/: next.config.js  package.json  tsconfig.json
apps/example/app/: globals.css  layout.tsx  (+2 more)
apps/web/: package.json
benchmark/: index.ts  package.json  pdfium.ts  pdfjs-napi.ts  pdfjs-node-canvas.ts  pdfjs-shared.ts  pdfjs.ts  report.ts  tsconfig.json  types.ts
consumer/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
consumer/app/: consumer-client.tsx  globals.css  layout.tsx  page.tsx
core/: CHANGELOG.md  Cargo.toml  README.md  package.json  tsconfig.json
core/src/: index.ts  lib.rs  native.ts  types.ts
core/test/: convert.test.ts  tsconfig.json
docs/: README.md  mdx-components.tsx  package.json
docs/app/: global.css  layout.tsx
docs/lib/: benchmark.ts  layout.shared.tsx
example/: components.json  next.config.js  package.json  tsconfig.json
example/app/: layout.tsx  page.tsx
scripts/: bundle-pdfium.mjs  bundle-pdfium.ts  check-changeset.mjs  check-changeset.ts  clean.mjs  clean.ts  copy-pdfium-to-npm.mjs  copy-pdfium-to-npm.ts  pdfium.mjs  pdfium.ts  prefetch-pdfium.mjs  prefetch-pdfium.ts  publish-packages.mjs  publish-packages.ts  stage-local-artifact.ts  stage-pdfium-artifact.mjs  stage-pdfium-artifact.ts  tsconfig.json
(+41 files in other folders)
